# dl-momonga-images-from-pinterest

./: .gitignore  README.md  Rakefile  dl-momonga-images-from-pinterest.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Literal.hs
