name:                dl-momonga-images-from-pinterest
version:             0.1.0.0
synopsis:            Download mOmonga images from Pinterest
description:         Please see README.md
homepage:            http://github.com/ne-sachirou/dl-momonga-images-from-pinterest#readme
license:             GPL-3
license-file:        LICENSE
author:              ne_Sachirou
maintainer:          utakata.c4se@gmail.com
copyright:           2016 ne_Sachirou
category:            Cli
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     FileUtil, Lib
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , lens
                     , lens-aeson
                     , MissingH
                     , template-haskell
                     , text
                     , vector
                     , wreq
  default-language:    Haskell2010

executable dl-momonga-images-from-pinterest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dl-momonga-images-from-pinterest
  default-language:    Haskell2010

test-suite dl-momonga-images-from-pinterest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hlint
                     , dl-momonga-images-from-pinterest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ne-sachirou/dl-momonga-images-from-pinterest
